Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27338

Labels in goto are colored incorrectly

    XMLWordPrintable

Details

    • 24df1f118 (11.0)

    Description

      Labels in goto statements are not colored as labels when clangd is enabled. For example:

      void foo()
      {
      	goto label;
      label:;
      }
      

      The label is colored correctly when clangd is disabled.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-27338
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            lastique Andrey Semashev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes